--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -6,7 +6,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Accueil</title>
+        <title>Offres</title>
     </head>
     <body>
         <h1>Offres</h1>
