--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/Header.astro";
 ---
 <!doctype html>
 <html lang="en">
@@ -9,6 +10,10 @@
         <title>Accueil</title>
     </head>
     <body>
+		<nav>
+    <a href="Accueil">Accueil</a>
+    <a href="offres">Offres</a>
+</nav>
         <h1>Accueil</h1>
     </body>
 </html>
