--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<nav>
-    <a href="Accueil">Accueil</a>
-    <a href="offres">Offres</a>
+		<nav>
+    <a href="/">Accueil</a>
+    <a href="/offres">offres</a>
 </nav>
