--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
 import Header from "../components/Header.astro";
+import Base from '../layouts/Base.astro';
 ---
+<Base titre="Accueil">
+    <h1>Accueil</h1> <!-- ou "Offres" pour la page des offres -->
+</Base>
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -10,10 +15,6 @@ import Header from "../components/Header.astro";
         <title>Accueil</title>
     </head>
     <body>
-		<nav>
-    <a href="Accueil">Accueil</a>
-    <a href="offres">Offres</a>
-</nav>
         <h1>Accueil</h1>
     </body>
 </html>
