--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,6 +1,11 @@
 ---
 import Header from "../components/Header.astro";
+import Base from '../layouts/Base.astro';
 ---
+<Base titre="offres">
+    <h1>offres</h1> <!-- ou "Offres" pour la page des offres -->
+</Base>
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -10,10 +15,6 @@ import Header from "../components/Header.astro";
         <title>Offres</title>
     </head>
     <body>
-        <nav>
-    <a href="Accueil">Accueil</a>
-    <a href="offres">Offres</a>
-</nav>
         <h1>Offres</h1>
     </body>
 </html>
