--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,20 +1,7 @@
 ---
-import Header from "../components/Header.astro";
 import Base from '../layouts/Base.astro';
 ---
-<Base titre="offres">
+<Base titre="Accueil">
     <h1>offres</h1> <!-- ou "Offres" pour la page des offres -->
 </Base>
 
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Offres</title>
-    </head>
-    <body>
-        <h1>Offres</h1>
-    </body>
-</html>
