--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Base from '../layouts/Base.astro';
+import "../assets/css/base.css";
 ---
 <Base titre="Accueil">
     <h1>Accueil</h1> <!-- ou "Offres" pour la page des offres -->
