--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,7 +1,8 @@
 ---
 import Base from '../layouts/Base.astro';
+import "../assets/css/base.css";
 ---
 <Base titre="Accueil">
-    <h1>offres</h1> <!-- ou "Offres" pour la page des offres -->
+    <h1>Offres</h1> <!-- ou "Offres" pour la page des offres -->
 </Base>
 
