--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,12 @@
 bottom-0">
     <div class="container mx-auto text-center">
         <p class="text-sm">&copy; {new Date().getFullYear()} Maëlie. Tous droits réservés.</p>
-        <a href="https://shimmering-capybara-5c6af0.netlify.app/" class="text-white hover:underline">
-            Visitez mon site
+        
+        
+       <button> <a href="https://www.service-public.fr/particuliers/vosdroits/F2753" class="text-white hover:underline">
+            Qu'est-ce qu'une offre d'achat d'un bien immobilier ?
         </a>
+        </button>
     </div>
 </footer>
 
