--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,14 +1,14 @@
 ---
 
-const { nomMaison, prix, surface, nbChambres, nbSdb, adresse, imgUrl } = Astro.props;
+const { ...offre } = Astro.props;
 ---
 <div class="card">
   <div class="card-content">
-    <h2>{nomMaison}</h2>
-    <p><strong>Adresse :</strong> {adresse}</p>
-    <p><strong>Prix :</strong> {prix}€</p>
-    <p><strong>Surface :</strong> {surface}m²</p>
-    <p><strong>Chambres :</strong> {nbChambres}</p>
-    <p><strong>Salles de bain :</strong> {nbSdb}</p>
+    <h2>{offre.nomMaison}</h2>
+    <p><strong>Adresse :</strong> {offre.adresse}</p>
+    <p><strong>Prix :</strong> {offre.prix}€</p>
+    <p><strong>Surface :</strong> {offre.surface}m²</p>
+    <p><strong>Chambres :</strong> {offre.nbChambres}</p>
+    <p><strong>Salles de bain :</strong> {offre.nbSdb}</p>
   </div>
 </div>
