--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -41,11 +41,20 @@ const offres = [
 ---
 <Base titre="Accueil">
     <h1>Offres</h1> <!-- ou "Offres" pour la page des offres -->
-    { offres.map((offre) => (
-        // afficher les nom des maisons sous forme de liste <ul>.
-        <Card {...offre} />
-    ))
-    }
+    <div x-data="{ showFavorites: false }">
+    <button @click="showFavorites = !showFavorites">
+        <span x-show="!showFavorites">Afficher les favoris</span>
+        <span x-show="showFavorites">Afficher tout</span>
+    </button>
+
+    <div x-show="?">
+        {offres.map((offre) => <Card {...offre} />)}
+    </div>
+    <div x-show="?">
+        {offres.map((offre) => offre.favori && <Card {...offre} />)}
+    </div>
+</div> 
+
 </Base>
 
 
