correction de mon tp

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
-<footer class=" text-white py-4 border-t fixed w-full
+<footer class=" text-white py-4 border-t fixed w-full bg-violet-950
 bottom-0">
     <div class="container mx-auto text-center">
         <p class="text-sm">&copy; {new Date().getFullYear()} Maëlie. Tous droits réservés.</p>
         
         
-       <button> <a href="https://www.service-public.fr/particuliers/vosdroits/F2753" class="text-white hover:underline">
+       <button> <a href="https://www.service-public.fr/particuliers/vosdroits/F2753" class="text-violet-300 hover:underline">
             Qu'est-ce qu'une offre d'achat d'un bien immobilier ?
         </a>
         </button>
