--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,8 @@
-<nav>
-    <a href="/" class=>Accueil</a>
-    <a href="/offres">Offres</a>
+<nav class="text-xl">
+    <button class="transition ease-in-out delay-150 text-violet-400 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ...">
+    <a href="/">Accueil</a>
+    <a href="offres ">Offres</a>
+    <a href="Contactform">Contact</a>
+    <a href="Agenda">Agenda</a>
+</button>
 </nav>
