surface/debut prix

--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -21,7 +21,8 @@ console.log(offres);
             {offres.map((offre) => offre.favori && <Card {...offre} />)}
         </div>
     </div>
-
+<a href={"offres/surface/200"}>Voir maisons + 200m2</a>
+<a href={"offres/prix/1000"}>Voir toutes les maisons à moins de 1000€</a>
 </Base>
 
 
