--- a/src/pages/offres/prix/[prix].astro
+++ b/src/pages/offres/prix/[prix].astro
@@ -8,7 +8,7 @@ const offres = await byPrix(prix);
 
 {offres.map(offre => (
     <div>
-        <h2> Nom de la maison: {offre.nom_maison}</h2>
-        <p>  Prix: {offre.Prix} $</p>
+        <h2> Nom de la maison: {offre.nomMaison}</h2>
+        <p>  Prix: {offre.prix} $</p>
     </div>
 ))}
