--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,10 +5,10 @@ console.log(offres);
 ---
 <a href={`/offres/${offres.id}`}>Voir plus</a>
 
-<div
-    class="h-[16em] w-[18em] border-2 border-[rgba(0,0,0,0.5)] rounded-[1.5em] bg-gradient-to-br bg-violet-400 to-pink-100 text-white font-nunito p-[1em] flex justify-center items-left flex-col gap-[0.75em] backdrop-blur-[12px]"
->
-<img src={offres.img} alt={offres.nomMaison}/>
+    <div
+        class="h-[16em] w-[18em] border-2 border-[rgba(0,0,0,0.5)] rounded-[1.5em] bg-gradient-to-br bg-violet-400 to-pink-100 text-white font-nunito p-[1em] flex justify-center items-left flex-col gap-[0.75em] backdrop-blur-[12px]"
+    >
+    <img src={offres.img} alt={offres.nomMaison} class="h-[10em] w-[16em] object-cover rounded-[1em]"/>
 <div>
    
     
